# arm_scenario_experiments

./: .gitignore  CMakeLists.txt  README.md  after_install.sh  extract_bag.sh  package.xml  process.sh  record_sequences_infinitely.sh  run.sh  setup.py  test.py
scripts/: README.md  RL_environment  RL_environment.py  atomic_babbler.py  compound_babbler.py  extract_bags  inspect_bag  inspect_bag.py  launch_exp.py  rebag  rebag.py  record_state.py  recorder  sampler.py  write_to_disk
scripts/atomic_babbling/: README.md  atomic_babbler  atomic_babbler.py  atomic_init_pose  atomic_launch  launch_exp.py
scripts/button_pressing/: README.md  button_RL_environment  button_babbler  button_bag_to_disk  button_init_pose  button_spawn_environment  button_testset  commands.txt
scripts/ik_babbling/: README  bag_to_disk  goto_init_pose  goto_init_pose.py  ik_babbler  launch_exp.py  launch_ik_babbling  spawn_environment  test_ik.py  writter.py
scripts/preprocessing/: preprocess.py  utils.py
scripts/rl/: fake_client.py  gym_gazebo_server.py
src/: image_saver.cpp  state_recorder.cpp
src/ann4smc/: bag_dumper.py  baxter_utils.py  recorder.py  utils.py
src/arm_scenario_experiments/: __init__.py  bag_dumper.py  baxter_utils.py  recorder.py  utils.py
srv/: String.srv
srv/RL_environment/: Start.srv  Step.srv
